# transfer1

./: .gitignore  .gitmodules  pyproject.toml
src/: eval.py
src/models/: loader.py  pt_contriever.py  pt_tevatron.py
src/models/jance/: jance.py
src/notebooks/: experiment-transfer1-eval.ipynb  experiment-transfer1-eval.py  experiment-transfer1-train.ipynb  jance-experiment-transfer1-eval.ipynb
src/ntcir_datasets/: ntcir-transfer.yaml  ntcir_transfer.py
